[package]
name = "runtime_lib"
authors = [ "CJ cjhillbrand@gmail.com" ]
version = "0.1.0"
edition = "2018"
description = "The runtime library used by the Java Virtual Machine."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
zip = "0.5.13"